refactor: place in respective folder

--- a/data-science/basics/titanic-analysis.ipynb
+++ b/data-science/basics/titanic-analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "88e31fb3-c699-4965-85ab-4177d6dfc6a5",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load the data\n",
-    "df = pd.read_csv('data/titanic.csv')"
+    "df = pd.read_csv('../data/titanic.csv')"
    ]
   },
   {
