feat: add docs for generic data analysis and predictive modeling workflow

--- a/data-science/practice/data_issue.ipynb
+++ b/data-science/practice/data_issue.ipynb
@@ -12,7 +12,8 @@
     "supervised(regression/ classification) or unsupervised)\n",
     "- Find issues if exists (check null, duplicates,)\n",
     "- handle issues\n",
-    "- Possible issue handling technique"
+    "- Find the relationship between attributes from the data.\n",
+    "- "
    ]
   },
   {
