--- a/R-programming/assignment/39_Project1.Rmd
+++ b/R-programming/assignment/39_Project1.Rmd
@@ -496,3 +496,433 @@ Alternativley, we can access by its name as well
 ```{r}
 list5[["dataframe"]]
 ```
+Accessed element manipulation
+```{r}
+list5[[1]]$Sport #Sport variable
+list5[[1]][, "Second"]
+list5[[1]][, "Second", drop=F]
+length(list5)
+```
+Adding new element
+```{r}
+list5[[4]] <- 2
+list5[["NewElement"]] <-3:6
+print(names(list5))
+print(list5)
+
+```
+### Matrices in R
+Performing matrix operations
+```{r}
+A <- matrix(1:10, nrow=5)
+B <- matrix(21:30, nrow=5)
+C <- matrix(21:40, nrow=2)
+
+row(A)
+ncol(B)
+dim(C)
+
+A + B
+A * B
+A - B
+A = B
+```
+### Arrays in R
+```{r}
+theArray <- array(1:12, dim=c(2,3,2))
+theArray
+
+theArray [1, , ] # 1st row of both
+theArray[1, ,1] # 1st row of first
+theArray[,1,] #1st column of both
+```
+## Session 4
+```{r}
+#Column vector
+x <- c(1:30)
+y <- x^3
+plot(x,y)
+```
+The graph for the plot is exponential.
+
+R script examples
+```{r}
+#store the current directory
+initial.dir <- getwd()
+
+#change to new directory
+setwd("~/projects/tilak/mds1/R-programming")
+
+# load necessary libraries
+library(magrittr)
+
+# set the output file (it will bypass R and Rstudio)
+sink("result.out")
+
+# load the data set from the folder
+iris <- read.csv("data/iris-data.csv")
+colnames(iris)
+
+# Do the analysis
+plot(iris)
+
+# result will appear in the output file
+summary(iris)
+cor(iris$Sepal.Length, iris$Sepal.Width)
+
+#Close the output file
+sink()
+
+# unload the libraries
+detach("package:magrittr")
+
+# change back to original directory
+setwd(initial.dir)
+
+```
+
+### Tee Operator
+```{r}
+# load necessary libraries
+library(magrittr)
+
+set.seed(123)
+# set 200 random normal distribution data
+mat <- rnorm(200) %>% matrix(ncol = 2)
+
+# Plot the matrix
+plot(mat)
+
+# Compute column sums separately
+colSums(mat)
+
+# use of tee pipe operator
+set.seed(123)
+# set 200 random normal distribution data
+rnorm(200) %>%
+  matrix(ncol = 2) %T>%
+  plot %>%
+  colSums
+```
+## Get data from the internet
+```{r}
+# load data from internet
+iris <- read.csv(
+  url("http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data"),
+  header=FALSE)
+head(iris)
+
+# Add columns names for V,V2,V3,V4 nd V5 columns to the iris data
+names(iris) <- c("Sepal.Length", "Sepal.Width", "Petal.Length", "Petal.Width", "Species")
+
+# See the new column name
+head(iris)
+
+# Save the iris data from internet in local computer (includes row names)
+write.csv(iris, "~/projects/tilak/mds1/R-programming/data/iris-new.csv")
+iris_new <- read.csv('~/projects/tilak/mds1/R-programming/data/iris-new.csv')
+head(iris_new) # it has extra column for row name
+
+# Save the iris data in local machine (excludes row names)
+write.csv(
+  iris,
+  "~/projects/tilak/mds1/R-programming/data/iris-data.csv", 
+  row.names = FALSE
+)
+
+iris_data <- read.csv('~/projects/tilak/mds1/R-programming/data/iris-data.csv')
+head(iris_data)  # it has extra column for row name
+
+# Convert the wide format data into long format
+library(reshape2)
+
+# Convert iris data set to long format
+iris_long <- melt(iris, 
+                  id.vars = "Species", 
+                  variable.name = "Measurement", 
+                  value.name = "Value")
+head(iris_long)
+
+# save the iris_long data in the working directory
+write.csv(iris_long, "iris_long1.csv", row.names = FALSE)
+
+# save the iris_long data in custom directory
+write.csv(iris_long, "~/projects/tilak/mds1/R-programming/data/iris_long1.csv", row.names = FALSE)
+
+```
+## Session 5
+### Bulit in function in R
+```{r}
+# round()
+x <- round(3.1415)
+print(x)  
+# Output: 3  (Default rounding, no decimal places)
+
+# round()
+round(3.1415, digits = 2)  
+# Output: 3.14 (Rounded to 2 decimal places)
+
+# factorial()
+factorial(3)  
+# Output: 6  (3! = 3 × 2 × 1)
+
+# factorial()
+factorial(2*3)  
+# Output: 720  (factorial(6) = 6! = 6 × 5 × 4 × 3 × 2 × 1)
+
+# mean()
+mean(1:6)  
+# Output: 3.5  (Average of numbers 1, 2, 3, 4, 5, 6 → (1+2+3+4+5+6)/6)
+
+# mean()
+mean(c(1:30))  
+# Output: 15.5  (Average of numbers 1 to 30 → (1+2+...+30)/30)
+```
+### Sample
+```{r}
+# The sample() function in R is used for random sampling from a given vector.
+
+# Define a die with values 1 to 6
+die <- 1:6  
+
+# 1. Randomly pick one value (without replacement)
+sample(x = die, size = 1)  
+
+# 2. Another random pick (without replacement)
+sample(x = die, size = 1)  
+
+# 3. Randomly pick one value (with replacement - same as default here)
+sample(x = die, size = 1, replace = TRUE)  
+
+# 4. Randomly pick two values (without replacement)
+sample(x = die, size = 2)  
+
+# 6. Randomly pick two values (with replacement, allowing duplicates)
+sample(x = die, size = 2, replace = TRUE)  
+
+```
+### Sample function to split the train and test data
+```{r}
+# Load the iris data set from a CSV file
+iris <- read.csv("../data/iris.csv")
+
+# Set a seed for reproducibility (ensures the same random split every time)
+set.seed(123)
+
+# Create a logical vector for 70:30 train-test split
+# TRUE (70% of rows) → Train set, FALSE (30% of rows) → Test set
+tt.sample <- sample(c(TRUE, FALSE), nrow(iris), replace = TRUE, prob = c(0.7, 0.3))
+
+# Subset iris data set into training (70%) and testing (30%) sets
+train <- iris[tt.sample, ]  # Training set
+test <- iris[!tt.sample, ]  # Testing set
+
+# Print data set sizes
+cat("Training Set Size:", nrow(train), "\n")
+cat("Testing Set Size:", nrow(test), "\n")
+```
+In the above code we,
+
+* Load data set: read.csv("iris.csv") loads the data set.
+* Set seed: Ensures the same random split each time you run the code.
+* Create a random logical vector (tt.sample) for selecting 70% train, 30% test.
+* Subset into train and test based on TRUE (train) and FALSE (test).
+* Print sizes of the train and test sets for verification.
+
+### User defined methods
+```{r}
+# define function
+roll <- function() {
+  die <- 1:6
+  # size = 2 => it means 2 dices are rolled
+  dice <- sample(die, size = 2, replace=TRUE)
+  
+  # get the sum of result of 2 dice
+  sum(dice)
+}
+# call function
+roll()
+roll()
+roll()
+
+# function with default parameter
+roll2 <- function(die = 1:6) {
+  # size = 2 => it means 2 dices are rolled
+  dice <- sample(die, size = 2, replace=TRUE)
+  
+  # get the sum of result of 2 dice
+  sum(dice)
+}
+roll2()
+
+# with parameter
+roll3 <- function(dice) {
+  # size = 2 => it means 2 dices are rolled
+  dice <- sample(dice, size = 2, replace=TRUE)
+  
+  # get the sum of result of 2 dice
+  sum(dice)
+}
+
+roll3(dice = 1:6)
+roll3(dice = 1:12)
+roll3(dice = 1:24)
+```
+
+Functions work on string
+```{r}
+best_practice <- c("Let", "the", "computer", "do", "the", "work")
+
+print_words <- function(sentence) {
+  
+  print(sentence[1])
+  print(sentence[2])
+  print(sentence[3])
+  print(sentence[4])
+  print(sentence[5])
+  print(sentence[6])
+  
+}
+print_words(best_practice) # [1] ”Let” [1] “the” [1] “computer” [1] “do” [1] “the” [1] “work”
+print_words(best_practice[-6]) # [1] ”Let” [1] “the” [1] “computer” [1] “do” [1] “the” [1] “NA”
+best_practice[-6]
+
+```
+Here, 
+
+* best_practice[-6] removes the 6th element ("work"), leaving only 5 elements.
+* The function print_words() still expects 6 elements (sentence[6]), but since there's no 6th element, it prints NA.
+
+### Function with for loop
+```{r}
+best_practice <- c("Let", "the", "computer", "do", "the", "work")
+
+print_words <- function(sentence) {
+  for (word in sentence) {
+    print(word)
+  }
+}
+
+print_words(best_practice)       # Prints all words
+print_words(best_practice[-6])   # Prints first 5 words without NA
+```
+## Apply family
+
+* **apply()**
+The apply() function is used for applying a function over rows or columns of a matrix or data frame. It allows to apply a function along either rows (MARGIN = 1) or columns (MARGIN = 2).
+```{r}
+# Create a matrix
+mat <- matrix(1:9, nrow = 3, byrow = TRUE)
+
+print(mat)
+# Apply sum function across columns (MARGIN = 2)
+apply(mat, MARGIN = 2, FUN = sum)
+# Output: [1] 12 15 18
+
+# Apply sum function across rows (MARGIN = 1)
+apply(mat, MARGIN = 1, FUN = sum)
+# Output: [1] 6 15 24
+
+```
+
+* **lapply()**
+The lapply() function is used for applying a function over list or data frame columns and it always returns a list.
+
+Example: Apply the length function to each column of a data frame:
+```{r}
+# Create a data frame
+df <- data.frame(a = 1:3, b = letters[1:3])
+df
+# Apply length function to each column of df
+lapply(df, length)
+# Output: $a [1] 3  $b [1] 3
+```
+* **sapply()**
+The sapply() function is similar to lapply(), but it tries to simplify the result. It returns a vector or matrix instead of a list, when possible.
+
+Example: Apply the length function to each column of a data frame (result simplified to a vector):
+```{r}
+# Create a data frame
+df <- data.frame(a = 1:3, b = letters[1:3])
+
+# Apply length function to each column of df
+sapply(df, length)
+# Output: a b 
+#         3 3
+```
+
+* **vapply()**
+
+The vapply() function is similar to sapply(), but it requires you to specify the type of output we expect. This makes it more reliable because it ensures the result is consistent.
+
+Example: Apply length to each column and specify that the output should be an integer vector:
+```{r}
+# Create a data frame
+df <- data.frame(a = 1:3, b = letters[1:3])
+
+# Apply length function to each column and specify output type
+vapply(df, length, FUN.VALUE = integer(1))
+# Output: a b 
+#         3 3
+```
+
+## Conditions
+```{r}
+age <- 1:99
+
+check_age <- function(age) {
+  if (age <= 15) {
+    print("Children")
+  } else {
+    if (age <= 65) {
+      print("Working group")
+    } else {
+      print("Senior citizen")
+    }
+  }
+}
+
+check_age(10)
+check_age(52)
+check_age(70)
+```
+
+```{r}
+check_age1 <- function(age) {
+  if (age <= 15) {
+    print("Children")
+  } else if(age > 15 && age <= 65) {
+      print("Working group")
+  } else {
+    print("Senior citizen")
+  }
+}
+
+check_age1(101)
+check_age1(52)
+check_age1(70)
+```
+
+```{r}
+check_age12 <- function(age) {
+  result <- ifelse(
+    age<=15, "child", 
+    ifelse(
+      (age > 15 && age <= 65), "Working", "senior")
+    )
+  print(result)
+}
+
+check_age12(101)
+check_age12(52)
+check_age12(70)
+
+```
+
+### Creating binary values
+```{r}
+y <- 1:40
+ifelse(y<20, "Too low", "Too high")
+#It’s a logical as:
+ifelse(y<20, TRUE, FALSE)
+```
