--- a/data-science/data-munging/data_munging.ipynb
+++ b/data-science/data-munging/data_munging.ipynb
@@ -2474,7 +2474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "usr",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
