--- a/data-science/presentation/world-happiness-index.ipynb
+++ b/data-science/presentation/world-happiness-index.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1684f6ee",
    "metadata": {},
    "outputs": [
@@ -316,17 +316,14 @@
     }
    ],
    "source": [
-    "# Job statisfaction has 2 null values\n",
+    "# Job satisfaction has 2 null values\n",
     "# we can drop the rows with null values or fill them with a value\n",
     "\n",
     "#Since we have only 153 records, it may not be a good idea to drop the rows with null values rather we can fill them with a value\n",
     "# fill the null values with the median of the column from their respective region\n",
     "df['Job Satisfaction'] = df.groupby('Region')['Job Satisfaction'].transform(lambda x: x.fillna(x.median()))\n",
     "# check the null values again\n",
-    "print(df.isnull().sum())\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(df.isnull().sum())"
    ]
   },
   {
