chore: format code

--- a/data-science/presentation/world-happiness-index.ipynb
+++ b/data-science/presentation/world-happiness-index.ipynb
@@ -5,7 +5,7 @@
    "id": "5e7d5c32",
    "metadata": {},
    "source": [
-    "# Analysis of the World Happiness Report 2024 dataset\n",
+    "# Analysis of the World Happiness Report dataset\n",
     "## Source: \n",
     "The dataset is available on [Kaggle](https://www.kaggle.com/datasets/ajaypalsinghlo/world-happiness-report-2024) and the official World Happiness Report [website](https://worldhappiness.report/).\n",
     "\n",
